--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -1175,7 +1175,10 @@ section.preview {
     background-color: blue;
     padding: 2% 4% 2% 4%;
     font-size: 17px;
-    color: white;
+}
+
+.preview button.gc a {
+    color: #f2f2f2;
 }
 
 @media screen and (min-width: 300px) and (max-width: 349px) {
