--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -257,12 +257,12 @@ img.close {
 
 .main .search input#search {
     position: relative;
-    width: 72%;
-    padding: 4.3% 42.3% 4.3% 11%;
+    width: 92%;
+    padding: 4.3% 28.3% 4.3% 4%;
     font-size: 16px;
     border: 0;
     border-radius: 7px;
-    opacity: 70%;
+    opacity: 0.7;
     color: #50504f;
 }
 
